fix projects' title bug on mobile phone

--- a/client-side/public/output.css
+++ b/client-side/public/output.css
@@ -868,6 +868,10 @@ video {
   margin-left: 1.5rem;
 }
 
+.ml-8 {
+  margin-left: 2rem;
+}
+
 .ml-auto {
   margin-left: auto;
 }
@@ -978,10 +982,6 @@ video {
 
 .h-1 {
   height: 0.25rem;
-}
-
-.h-1\/2 {
-  height: 50%;
 }
 
 .h-1\/3 {
@@ -1393,10 +1393,6 @@ video {
 
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
-.grid-cols-24 {
-  grid-template-columns: repeat(24, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -1908,11 +1904,6 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .py-1 {
@@ -2550,10 +2541,6 @@ video {
     flex-direction: row;
   }
 
-  .sm\:items-start {
-    align-items: flex-start;
-  }
-
   .sm\:justify-normal {
     justify-content: normal;
   }
@@ -2564,6 +2551,11 @@ video {
 
   .sm\:text-left {
     text-align: left;
+  }
+
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
@@ -2649,5 +2641,3 @@ video {
     padding-bottom: 6rem;
   }
 }
-
-
